# agentAI

./: .gitignore  langchainintro.ipynb  messages.ipynb  middleware.ipynb  modelIntengration.ipynb  pyproject.toml  requirements.txt  structuredoutput.ipynb  tools.ipynb
Chat_SQL/: app.py  splite.py  student.db
Groq_Chatbot/: app.py
HuggingfaceWith_langchain/: experiement.ipynb
PDF_Query_With_langchain_and_AstroDB/: query.ipynb
Q&A_Chatbot/: app.py  requirements.txt
RAG_Q&A_Conversation/: app.py
RAG_Q&A_Conversation/chroma_db/: chroma.sqlite3
ollama_Chatbot/: app.py
textSummary/: app.py  text_summarization.ipynb
