[project]
name = "agentai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain-classic>=1.0.8",
    "langchain-community==0.3.29",
    "langchain-google-genai>=4.2.5",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "transformers>=5.12.1",
]
